[gd_scene load_steps=6 format=3 uid="uid://ew81kfgau176"]

[ext_resource type="Script" uid="uid://d2pjj4lkronpl" path="res://title_screen.gd" id="1_p6f3j"]
[ext_resource type="FontFile" uid="uid://bpsstsb2qw1as" path="res://art/font-press-start-2p/PressStart2P-Regular.ttf" id="2_abcd"]
[ext_resource type="Texture2D" uid="uid://cv1f4s3671dvx" path="res://art/ship.png" id="3_ship"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font = ExtResource("2_abcd")
font_size = 200
font_color = Color(0.223529, 1, 0.0784314, 1)

[sub_resource type="LabelSettings" id="LabelSettings_main"]
font = ExtResource("2_abcd")
font_size = 48
font_color = Color(0.223529, 1, 0.0784314, 1)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_p6f3j")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
color = Color(0, 0, 0, 0)

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopSpacer" type="Control" parent="MainVBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Title" type="Label" parent="MainVBox"]
layout_mode = 2
text = "D-STROID"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="ShipContainer" type="CenterContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="MainVBox/ShipContainer"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MainVBox/ShipContainer/Control"]
modulate = Color(0.223529, 1, 0.0784314, 1)
position = Vector2(300, 300)
rotation = -1.5708
scale = Vector2(7.03125, 7.03125)
texture = ExtResource("3_ship")

[node name="MiddleSpacer" type="Control" parent="MainVBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MainVBox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainVBox/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Spacer1" type="Control" parent="MainVBox/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TrainingRow" type="HBoxContainer" parent="MainVBox/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TrainingArrow" type="Label" parent="MainVBox/CenterContainer/VBoxContainer/TrainingRow"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "▶"
label_settings = SubResource("LabelSettings_main")

[node name="TrainingOption" type="Label" parent="MainVBox/CenterContainer/VBoxContainer/TrainingRow"]
layout_mode = 2
text = "TRAIN"
label_settings = SubResource("LabelSettings_main")

[node name="EasyRow" type="HBoxContainer" parent="MainVBox/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="EasyArrow" type="Label" parent="MainVBox/CenterContainer/VBoxContainer/EasyRow"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "▶"
label_settings = SubResource("LabelSettings_main")

[node name="EasyOption" type="Label" parent="MainVBox/CenterContainer/VBoxContainer/EasyRow"]
layout_mode = 2
text = "EASY"
label_settings = SubResource("LabelSettings_main")

[node name="NormalRow" type="HBoxContainer" parent="MainVBox/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NormalArrow" type="Label" parent="MainVBox/CenterContainer/VBoxContainer/NormalRow"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "▶"
label_settings = SubResource("LabelSettings_main")

[node name="NormalOption" type="Label" parent="MainVBox/CenterContainer/VBoxContainer/NormalRow"]
layout_mode = 2
text = "NORMAL"
label_settings = SubResource("LabelSettings_main")

[node name="HardRow" type="HBoxContainer" parent="MainVBox/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HardArrow" type="Label" parent="MainVBox/CenterContainer/VBoxContainer/HardRow"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "▶"
label_settings = SubResource("LabelSettings_main")

[node name="HardOption" type="Label" parent="MainVBox/CenterContainer/VBoxContainer/HardRow"]
layout_mode = 2
text = "HARD"
label_settings = SubResource("LabelSettings_main")

[node name="Spacer2" type="Control" parent="MainVBox/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
